<resources>
    <string name="app_name">Zoneify</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="google_maps_key">AIzaSyBJKmjtgH3QSG-TTt6sXQ0h1E7WCkF46as</string>
    <string name="editZoneName">Name</string>
    <string name="edit_location">EDIT LOCATION</string>
    <string name="editZoneMessage">Message</string>
    <string name="leaving">Leaving</string>
    <string name="entering">Entering</string>
    <string name="required_helper">* Required</string>
    <string name="zone_active">On</string>
    <string name="zone_inactive">Off</string>
    <string name="radius">Radius</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_required">Location access is required for this app.</string>
    <string name="location_not_available">Location not available</string>
    <string name="splash_createdby">A PLAR project created by: David Hines</string>
    <string name="skip">Skip</string>
    <string name="onboarding_one_title">Welcome to Zoneify!\nZone List - Add/Edit Zone</string>
    <string name="onboarding_one_content">Zoneify is a location based notification app. When you
        leave or enter a zone, Zoneify will send you a notification! \n\n

        To get started add a zone by clicking on the
        floating action button in the bottom right corner.\n\n
        To edit a zone tap one of the listed zones.
    </string>
    <string name="onboarding_two_title">Add/Edit Zone</string>
    <string name="onboarding_two_content">After clicking on the add zone button you need to set a Title and a Message for the notification.\n\n
        By default the zone will be set to active and will trigger when you enter a zone. Toggle these settings to change them.\n\n
        By default the zone will be set to your current location. Click on the Edit Location button to change the zone location and radius.\n\n
        Once you have entered a Title and Message and are happy with the other settings click on the Save button in the app bar.\n\n
        To delete the zone click on the Delete button in the app bar.\n\n
        If you wish to just edit the zone, make your changes and click on the Save button.
    </string>
    <string name="onboarding_three_title">Edit Zone Location</string>
    <string name="onboarding_three_content">After clicking on the Edit Location button you will see a map with a circle indicating where your zone is located.\n\n
        To change the location simply tap the screen where you want the zone to be located.\n\n
        Scroll the map by dragging your finger around the screen. Zoom in and out by pinching on the screen.\n\n
        To change the radius of the zone click on the + or - buttons on the bottom of the screen. The minimum radius is 75m and the max is 250.\n\n
        You can save or delete the zone from this screen as well.
    </string>
</resources>
